wsl/test/doc-bootstrap-namespaces.yaml
# doc-bootstrap-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata: {name: filter}
---
apiVersion: v1
kind: Namespace
metadata: {name: credential}
---
apiVersion: v1
kind: Namespace
metadata: {name: web}
---
apiVersion: v1
kind: Namespace
metadata: {name: ambassador}
---
apiVersion: v1
kind: Namespace
metadata: {name: service}
---
apiVersion: v1
kind: Namespace
metadata: {name: network}
---
apiVersion: v1
kind: Namespace
metadata: {name: resource-management}
---
apiVersion: v1
kind: Namespace
metadata: {name: cron}
---
apiVersion: v1
kind: Namespace
metadata: {name: adapter}
---
apiVersion: v1
kind: Namespace
metadata: {name: context}
---
apiVersion: v1
kind: Namespace
metadata: {name: path-ingress}
---
apiVersion: v1
kind: Namespace
metadata: {name: pay}
---
apiVersion: v1
kind: Namespace
metadata: {name: server}
---
apiVersion: v1
kind: Namespace
metadata: {name: rolling-update}
---
apiVersion: v1
kind: Namespace
metadata: {name: probes}
---
apiVersion: v1
kind: Namespace
metadata: {name: persistent}
---
apiVersion: v1
kind: Namespace
metadata: {name: session}
---
# －－ Killer.sh 追加課題 (Q1-Q22) 側 －－
apiVersion: v1
kind: Namespace
metadata: {name: neptune}
---
apiVersion: v1
kind: Namespace
metadata: {name: mercury}
---
apiVersion: v1
kind: Namespace
metadata: {name: saturn}
---
apiVersion: v1
kind: Namespace
metadata: {name: pluto}
---
apiVersion: v1
kind: Namespace
metadata: {name: mars}
---
apiVersion: v1
kind: Namespace
metadata: {name: jupiter}
---
apiVersion: v1
kind: Namespace
metadata: {name: moon}
---
apiVersion: v1
kind: Namespace
metadata: {name: sun}
---
apiVersion: v1
kind: Namespace
metadata: {name: venus}
---
apiVersion: v1
kind: Namespace
metadata: {name: earth}
---
apiVersion: v1
kind: Namespace
metadata: {name: resource}   # reserve（万一の汎用名）
