wsl/test/q21.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: neptune
