wsl/test/envar-demo02.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: envar-demo02
  name: envar-demo02
spec:
  containers:
  - command:
    - /bin/sh
    - -c
    - '[sleep 3600,'
    - echo "Hello"]
    image: busybox:1.36
    name: envar-demo02
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
