wsl/test/example-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
spec:
  containers:
    - name: example-container
      image: nginx  # nginxイメージを使用
      command: ["/bin/sh", "-c", "nginx -s quit; while killall -0 nginx; do sleep 1; done; echo 'nginx has been stopped'"]
