wsl/test/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: ambassador
spec:
  volumes:
  - name: haproxy-cfg
    configMap:
      name: haproxy-cfg
  containers:
  - image: haproxy:alpine
    name: haproxy
    volumeMounts:
      - name: haproxy-cfg
        mountPath: /usr/local/etc/haproxy
  - image: nginx:alpine
    name: frontend
    command: ["sh", "-c", "while true; do sleep 5; date && curl $SERVICE_NAME:8080 -m 2; done"]
