wsl/test/holy-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: holy-api
  name: holy-api
  namespace: pluto
spec:
  replicas: 3
  selector:
    matchLabels:
      app: holy-api
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: holy-api
    spec:
      containers:
      - image: nginx:1.23-alpine
        name: nginx
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
status: {}
