wsl/test/logger.yaml
apiVersion: v1
kind: Pod
metadata:
  name: logger
  namespace: adapter
spec:
  volumes:
  - name: tmplog
    emptyDir: {}
  - name: configlog
    configMap:
      name: fluentd-config
  containers:
  - name: fluentd
    image: fluent/fluentd:edge
    volumeMounts:
    - name: tmplog
      mountPath: /tmp/log
    - name: configlog
      mountPath: /fluentd/etc
  - name: logger
    image: busybox
    volumeMounts:
    - name: tmplog
      mountPath: /tmp/log
    args:
    - /bin/sh
    - -c
    - >
      while true;
      do
        echo {\"dt\": \"$(date -u)\"} >> /tmp/log/input.log;
        sleep 10;
      done
