wsl/test/nginx2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx2
  name: nginx2
spec:
  containers:
  - image: busybox  # 軽量なイメージを使用
    name: nginx2
    resources: {}
    command: ["/bin/sh", "-c", "echo Hello; echo Hello2"]
  dnsPolicy: ClusterFirst
  restartPolicy: Never  # 修正: 再起動しないように設定
status: {}
