wsl/test/q20-04.yaml
# q20-04.yaml  (frontend)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: venus
  labels: { app: frontend }
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: client
          image: busybox:1.31.0
          command: ["sh", "-c", "sleep 1d"]
