wsl/test/q7-02.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver-sat-001
  namespace: saturn
  labels:
    id: webserver-sat-001
spec:
  containers:
    - name: nginx
      image: nginx:1.16.1-alpine
      ports: [{ containerPort: 80 }]
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: webserver-sat-002
  namespace: saturn
  labels:
    id: webserver-sat-002
spec:
  containers:
    - name: nginx
      image: nginx:1.16.1-alpine
      ports: [{ containerPort: 80 }]
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: webserver-sat-003                # ← これが “my-happy-shop”
  namespace: saturn
  labels:
    id: webserver-sat-003
  annotations:
    description: >-
      this is the server for the e-Commerce System my-happy-shop
spec:
  containers:
    - name: nginx
      image: nginx:1.16.1-alpine
      ports: [{ containerPort: 80 }]
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: webserver-sat-004
  namespace: saturn
  labels:
    id: webserver-sat-004
spec:
  containers:
    - name: nginx
      image: nginx:1.16.1-alpine
      ports: [{ containerPort: 80 }]
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: webserver-sat-005
  namespace: saturn
  labels:
    id: webserver-sat-005
spec:
  containers:
    - name: nginx
      image: nginx:1.16.1-alpine
      ports: [{ containerPort: 80 }]
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: webserver-sat-006
  namespace: saturn
  labels:
    id: webserver-sat-006
spec:
  containers:
    - name: nginx
      image: nginx:1.16.1-alpine
      ports: [{ containerPort: 80 }]
  restartPolicy: Always
