wsl/test/test-command.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test-command
  name: test-command
spec:
  containers:
  - command:
    - sh
    - -c
    - touch /tmp/ready && sleep 1d
    image: busybox:1.31.0
    name: test-command
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
