wsl/test/test-command2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test-command2
  name: test-command2
spec:
  containers:
  - command:
    - sh
    - -c
    - touch /tmp/ready
    image: busybox:1.31.0
    name: test-command2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
