wsl/test/project-plt-6cc-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    project: plt-6cc-api
  name: project-plt-6cc-svc
  namespace: pluto
spec:
  ports:
  - port: 3333
    protocol: TCP
    targetPort: 80
  selector:
    project: plt-6cc-api
  type: ClusterIP
status:
  loadBalancer: {}
